<?xml version="1.0"?>
<package>
  <name>collision_avoidance</name>
  <version>0.0.0</version>
  <description>The collision_avoidance package</description>

  <maintainer email="janne.spijkervet@hotmail.com">Janne Spijkervet</maintainer>
  <maintainer email="janne.spijkervet@hotmail.com">Janne Spijkervet</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend></build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>python-six</run_depend>
  <!-- <run_depend>python-tensorflow-pip</run_depend> -->
</package>
